# cccc

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md
examples/example0/: CMakeLists.txt  main.cc
lib/: CMakeLists.txt
lib/include/: application.h  backend.h  bipbuffer.h  cccc.h  graph.h  identifiable.h  link.h  node.h  object.h  objects.h  packet.h  packetbuffer.h  pin.h  runtime.h  shortid.h  singlethreadbackend.h
lib/include/objects/: number.h
lib/src/: bipbuffer.cc  cccc.cc  graph.cc  link.cc  node.cc  pin.cc  singlethreadbackend.cc
libcccc/include/: link.h  pin.h
libcccc/src/: cccc.cc  link.cc
test/: CMakeLists.txt  main.cc  test_bipbuffer.cc  test_comm.cc  test_link.cc  test_link.h  test_node.cc  test_packet.cc  test_pin.cc
